<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/numbers"
    android:padding="8dp"
    tools:context=".MainActivity">



    <EditText
        android:id="@+id/input_and_result"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="@dimen/et_text_size"
        app:layout_constraintBottom_toTopOf="@id/btn_discharge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:hint="Результат" />

    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/one"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toStartOf="@id/input_and_result"
        app:layout_constraintTop_toBottomOf="@id/input_and_result" />

    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/two"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_one"
        app:layout_constraintTop_toBottomOf="@id/input_and_result" />

    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/three"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_two"
        app:layout_constraintTop_toBottomOf="@id/input_and_result" />

    <Button
        android:id="@+id/btn_discharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/c"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="@id/input_and_result"
        app:layout_constraintStart_toEndOf="@id/btn_three"
        app:layout_constraintTop_toBottomOf="@id/input_and_result" />

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/four"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toStartOf="@id/input_and_result"
        app:layout_constraintTop_toBottomOf="@id/btn_one" />

    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/five"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_four"
        app:layout_constraintTop_toBottomOf="@id/btn_two" />

    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/six"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_five"
        app:layout_constraintTop_toBottomOf="@id/btn_three" />

    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/plus"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_six"
        app:layout_constraintTop_toBottomOf="@id/btn_discharge" />

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/seven"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toStartOf="@id/input_and_result"
        app:layout_constraintTop_toBottomOf="@id/btn_four" />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/eight"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_seven"
        app:layout_constraintTop_toBottomOf="@id/btn_five" />

    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/nine"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_eight"
        app:layout_constraintTop_toBottomOf="@id/btn_six" />

    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/minus"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_nine"
        app:layout_constraintTop_toBottomOf="@id/btn_plus" />

    <Button
        android:id="@+id/btn_zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/zero"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/input_and_result"
        app:layout_constraintTop_toBottomOf="@id/btn_seven" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/equals"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_zero"
        app:layout_constraintTop_toBottomOf="@id/btn_eight" />

    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/division"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@id/btn_equals"
        app:layout_constraintTop_toBottomOf="@id/btn_nine" />


    <Button
        android:id="@+id/btn_multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/roundbutton"
        android:text="@string/multiplication"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/input_and_result"
        app:layout_constraintStart_toEndOf="@id/btn_division"
        app:layout_constraintTop_toBottomOf="@id/btn_minus" />


</androidx.constraintlayout.widget.ConstraintLayout>